# polymarket_monitor_engine

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README_CN.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
config/: .env.example  config.example.yaml  config.yaml
deploy/: docker-compose.yml
docs/: ci-setup.md  operations.md
scripts/: _ensure_uv.sh  bootstrap.sh  build.sh  build_alert_dataset.py  ci-test.sh  diagnose.sh  docs.sh  format.sh  gen.sh  lint.sh  migrate-down.sh  migrate-up.sh  release.sh  run.sh  test-integration.sh  test.sh
src/polymarket_monitor_engine/: __init__.py  __main__.py  config.py
src/polymarket_monitor_engine/adapters/: README_CN.md  clob_ws.py  discord_sink.py  gamma_http.py  multiplex_sink.py  redis_sink.py  stdout_sink.py
src/polymarket_monitor_engine/application/: README_CN.md  component.py  dashboard.py  discovery.py  monitor.py  orderbook.py  parsers.py  types.py
src/polymarket_monitor_engine/application/signals/: STRATEGY_LOG.md  __init__.py  detector.py
src/polymarket_monitor_engine/domain/: README_CN.md  events.py  models.py  selection.py
src/polymarket_monitor_engine/domain/schemas/: __init__.py  event_payloads.py
src/polymarket_monitor_engine/ports/: README_CN.md  catalog.py  clock.py  feed.py  sink.py
src/polymarket_monitor_engine/util/: README_CN.md  clock.py  httpx_setup.py  ids.py  logging_setup.py
tests/: conftest.py  test_alert_dataset.py  test_alert_rules.py  test_clob_ws.py  test_component.py  test_config.py  test_dashboard.py  test_discord_sink.py  test_discovery.py  test_gamma_http.py  test_logging_setup.py  test_multiplex_sink.py  test_orderbook.py  test_parsers.py  test_redis_sink.py  test_selection.py  test_signal_detector.py
tests/fixtures/: alert_dataset.jsonl
tests/utils/: __init__.py  alert_dataset.py  alert_rules.py
